# PyMCFunction

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml  update_specific_types.yaml
pymcfunction/: __init__.py  cli.py  types.py  util.py
pymcfunction/commands/: bossbar.py  effect.py  execute.py  experience.py  item.py  scoreboard.py  simple.py  tag.py  team.py  teleport.py  time.py
pymcfunction/update_specific_types/: advancement.py  block.py  effect.py  entity.py  item.py
test/: pymcfunctionconfig.toml
test/data/: test.py  ticker.py
test/data/testdir/: testtt.py
test/testdpfolder/: pack.mcmeta
test/testdpfolder/data/minecraft/tags/functions/: tick.json
tools/: update_specific_types.py
